added sidenav bar!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<sidenav></sidenav>
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    Welcome to {{ title }}! 
   </h1>
   <img width="300" alt="Orbit Logo" src="./assets/orbitlogo.png">
 </div>
-<h2>Here are some links to help you start: </h2>
-<ul>
+<h2>Here are some links to help you start: </h2>  
+<ul> 
   <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
   </li>
