some janky routing lol

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<sidenav></sidenav>
+<sidenav></sidenav> 
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}! 
+    Welcome to {{ title }}!
   </h1>
   <img width="300" alt="Orbit Logo" src="./assets/orbitlogo.png">
 </div>
- 
+ <router-outlet></router-outlet>
+ <!--Routed views go here-->
+ <!-- <a mat-list-item href="/ratings"><a [routerLink]="['/ratings']">Ratings</a></a> -->
